# 1022

./: .gitignore  README.md  pyproject.toml
hfrpkg/: compute_folder.py  compute_single.py  fetch_data.py  read_optsum.py  run_spec.py  runner.py  spec_compute.py  utils.py  write_data.py
hfrpkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hfrpkg/multi/: checkConfJobs.py  extractConfs.py  grab_unique.py  hfr_driver.py  makeConf.py  multi_spec.py  multi_spec_prep.py  run_unique.py  unique_spec.py
hfrpkg/sandbox/: Hfcore.py  pred.py  rec.py  verify.py
